--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,14 +1,6 @@
-import React from 'react';
-import { BrowserRouter as Router } from 'react-router-dom';
-import AppRoutes from './routes.jsx';
-import './App.css';
-
-function App() {
-  return (
-    <Router>
-      <AppRoutes />
-    </Router>
-  );
+.app-container {
+  min-height: 100vh;
+  background-color: #fefefe;
+  font-family: 'Inter', sans-serif;
 }
 
-export default App;
