--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,14 @@
 :root {
-    font-family: 'Inter', Arial, sans-serif;
-    background: #f7f9fc;
-    color: #2240a2;
-  }
-  
-  body {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
-    box-sizing: border-box;
-  }
-  
-  a {
-    color: #2e6cf6;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
+  --primary-color: #ec407a;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: #fffafc;
+}
